--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <meta name="msapplication-TileColor" content="#b721ff">
         <meta name="theme-color" content="#b721ff">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
         <style>
             html { height:100%; overflow:hidden; }
             body {
@@ -58,7 +61,7 @@
                 -webkit-text-stroke-color: black;
                 font-weight:900;
                 font-size:80px;
-                font-family: 'Nunito', sans-serif;
+                font-family: "Madimi One", sans-serif;
                 word-wrap: break-word;
             }
             @media(min-width:1000px) {
@@ -76,7 +79,7 @@
     </head>
 
     <body>
-        <img class="title" src="imgs/popcat.svg" alt="POPCAT">
+        <img class="title" width="500" height="600" src="imgs/popcat.svg" alt="POPCAT">
         
         <div class="cat-img" id="p"></div>
 
